# qt-model-view

./: CMakeLists.txt  Main.qml  README.md
components/: CppListView.qml  IntegerListView.qml
entities/: TodoList.cpp  TodoList.h
models/: TodoModel.cpp  TodoModel.h
utils/: model.js
